<resources>
    <string name="app_name">Keep It Up</string>

    <string name="checklist">Чек-лист</string>
    <string name="habits">Привычки</string>
    <string name="settings">Настройки</string>
    <string name="statistics">Статистика</string>

    <string name="habit_name">Название привычки</string>
    <string name="habit_week_days">Дни выполнения</string>
    <string name="habit_amount">Повторения</string>
    <string name="habit_notification">Напоминание</string>
    <string name="habit_notification_time">Время напоминания</string>
    <string name="habit_notification_time_choose">Выберите время напоминания</string>
    <string name="habit_notification_text">Самое время заняться делом</string>

    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>

    <string name="delete_habit">Вы уверены что хотите удалить привычку?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="progress">Прогресс</string>

    <string name="week_days_choose">Выберите дни недели</string>
    <string name="icon_choose">Выберите иконку</string>
    <string name="color_choose">Выберите цвет</string>

    <string name="week_days_monday">Понедельник</string>
    <string name="week_days_tuesday">Вторник</string>
    <string name="week_days_wednesday">Среда</string>
    <string name="week_days_thursday">Четверг</string>
    <string name="week_days_friday">Пятница</string>
    <string name="week_days_saturday">Суббота</string>
    <string name="week_days_sunday">Воскресенье</string>

    <string name="week_days_monday_abbreviated">Пн</string>
    <string name="week_days_tuesday_abbreviated">Вт</string>
    <string name="week_days_wednesday_abbreviated">Ср</string>
    <string name="week_days_thursday_abbreviated">Чт</string>
    <string name="week_days_friday_abbreviated">Пт</string>
    <string name="week_days_saturday_abbreviated">Сб</string>
    <string name="week_days_sunday_abbreviated">Вс</string>
    <string name="week_days_never">Никогда</string>

    <string name="day_streak">Дней подряд:</string>

    <string name="notifications_allowed">Разрешить уведомления</string>
</resources>