<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@drawable/layout_round_corners"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_Icon"
            android:layout_width="60dp"
            android:layout_height="50dp"
            app:tint="@color/gray_while"
            tools:srcCompat="@drawable/ic_setting" />

        <TextView
            android:id="@+id/textView_Name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:gravity="center_vertical"
            android:text="Habit Name" />

        <ImageView
            android:id="@+id/imageView_OpenClose"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:clickable="true"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:srcCompat="@drawable/ic_down"
            app:tint="@color/gray_while" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_invisible_for_auto_size1"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:layout_marginHorizontal="16dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:visibility="invisible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_Name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:textColorHint="@color/gray_while"
                app:boxBackgroundColor="@color/gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_Name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/habit_name"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/imageView_Icon_Edit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    app:tint="@color/gray_while"
                    tools:srcCompat="@drawable/ic_setting" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/imageView_Color_Edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/gray_while"
                    app:tint="@color/gray_while" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView_invisible_for_auto_size2"
                    android:layout_width="match_parent"
                    android:layout_height="21dp"
                    android:layout_marginHorizontal="16dp"
                    android:autoSizeTextType="uniform"
                    android:visibility="invisible" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField_Week_Days"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:textColorHint="@color/gray_while"
                    app:boxBackgroundColor="@color/gray"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_week_days"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:autoSizeTextType="none"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/habit_week_days"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_Amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:textColorHint="@color/gray_while"
                app:boxBackgroundColor="@color/gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_Amount"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/habit_amount"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_Notification_Time"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:textColorHint="@color/gray_while"
                app:boxBackgroundColor="@color/gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_Notification_Time"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/habit_notification_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox_Notification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/habit_notification"
                android:textColor="@color/gray_while"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_Delete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:clickable="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_delete"
                app:tint="@color/red" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>